<resources>
    <string name="app_name">My NanodeGree Apps</string>

    <string name="action_settings">Settings</string>

    <string name="main_activity_title">My NanodeGree Apps</string>
    <string name="main_activity_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="main_activity_scores">SCORES APP</string>
    <string name="main_activity_library">LIBRARY APP</string>
    <string name="main_activity_build_it_bigger">BUILD IT BIGGER</string>
    <string name="main_activity_xyz_reader">XYZ READER</string>
    <string name="main_activity_capstone">CAPSTONE MY OWN APP</string>


    <string name="main_activity_button_push_toast">This button will launch my %1$s app</string>

    <string name="spotify">Spotify</string>
    <string name="scores">Scores</string>
    <string name="library">Library</string>
    <string name="builtit">Scores</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
