<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_activity_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/main_activity_title_size"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_spotify_streamer"
                android:id="@+id/main_btn_spotify_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center_vertical"
                android:background="#F08C35"
                style="@style/main_activity_linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_scores"
                android:id="@+id/main_btn_scores_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center"
                android:background="#F08C35"
                style="@style/main_activity_linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_library"
                android:id="@+id/main_btn_library_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center"
                android:background="#F08C35"
                style="@style/main_activity_linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_build_it_bigger"
                android:id="@+id/main_btn_buildit_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center"
                android:background="#F08C35"
                style="@style/main_activity_linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_xyz_reader"
                android:id="@+id/main_btn_xyz_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center"
                android:background="#F08C35"
                style="@style/main_activity_linear_layout" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_activity_buttons_height"
                android:text="@string/main_activity_capstone"
                android:id="@+id/main_btn_capstone_app"
                android:textSize="@dimen/main_activity_buttons_text_size"
                android:layout_gravity="center"
                android:background="#ff3d00"
                style="@style/main_activity_linear_layout" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
